<resources>
    <string name="app_name">Clinic Appointment</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="invalid_email_password">Email hoặc mật khẩu không đúng.</string>
    <string name="something_wrong">Đã có lỗi xảy ra.</string>
    <string name="search_hint_dashboard">Tìm kiếm CSYT/bác sĩ/chuyên khoa</string>
    <string name="home">Trang chủ</string>
    <string name="scheduling">Đặt lịch</string>
    <string name="my_scheduling">Lịch của tôi</string>
    <string name="account">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_doctor">Tìm kiếm bác sĩ</string>
    <string name="find_clinic">Tìm phòng khám</string>
    <string name="make_appointment">Đặt lịch khám</string>
    <string name="hospital_and_clinic">Bệnh viện &amp; phòng khám</string>
    <string name="name">Tên</string>
    <string name="doctor_name">Tên bác sĩ</string>
    <string name="hospital_and_clinic_name"><![CDATA[Tên bệnh viện & phòng khám]]></string>
    <string name="department">Chuyên khoa</string>
    <string name="department_name">Tên chuyên khoa</string>
    <string name="search">Tìm kiếm</string>
    <string name="close">Đóng</string>
    <string name="search_hint_select_hospital">Nhập tên bệnh viện hoặc phòng khám</string>
    <string name="search_hint_select_department">Nhập tên chuyên khoa cần tìm kiếm</string>
    <string name="popular_hospital_and_clinic">Bệnh viện và phòng khám phổ biến</string>
    <string name="from_all_hospital_and_clinic"><![CDATA[Từ tất cả bệnh viện & phòng khám]]></string>
    <string name="from_all_department">Từ tất cả chuyên khoa</string>
    <string name="something_wrong_happened">Đã có lỗi xảy ra. Vui lòng kiểm tra kết nối</string>
    <string name="department_list">Danh sách chuyên khoa</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="please_fill_this_information">Vui lòng nhập đầy đủ thông tin bên dưới để tạo tài khoản</string>
    <string name="please_select_profile">Vui lòng chọn một trong các hồ sơ bên dưới, hoặc bấm vào biểu tượng ở trên để thêm hồ sơ bệnh nhân</string>
    <string name="please_fill_this_information_to_update">Vui lòng nhập đầy đủ thông tin bên dưới để cập nhật</string>
    <string name="asterisk">*</string>
    <string name="icon_back">Icon back</string>
    <string name="icon_information">Icon information</string>
    <string name="full_name">Họ và tên</string>
    <string name="type_full_name">Nhập họ và tên</string>
    <string name="type_password_at_least_6_characters">Nhập mật khẩu tối thiểu 6 ký tự</string>
    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="confirm_your_password">Xác nhận lại mật khẩu</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="type_day_month_year">Nhập ngày/tháng/năm</string>
    <string name="type_email">Nhập email</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="type_phone_number">Nhập số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="type_address">Nhập địa chỉ</string>
    <string name="sign_up">Đăng ký</string>
    <string name="accept_rules">Bằng việc nhấn nút Đăng ký, bạn đã đồng ý với Quy định sử dụng và Chính sách bảo mật của ứng dụng này</string>
    <string name="please_select_gender">Vui lòng chọn giới tính</string>
    <string name="accept">Đồng ý</string>
    <string name="not_full_fill_yet">Bạn chưa nhập đầy đủ thông tin theo yêu cầu. Vui lòng kiểm tra lại.</string>
    <string name="password_and_repeat_no_match">Mật khẩu và xác nhận mật khẩu không trùng khớp. Vui lòng kiểm tra lại.</string>
    <string name="password_must_have_least_six">Mật khẩu phải dài tối thiểu 6 ký tự. Vui lòng kiểm tra lại.</string>
    <string name="invalid_email">Email bạn nhập không hợp lệ. Vui lòng kiểm tra lại.</string>
    <string name="invalid_phone_number">Số điện thoại bạn nhập không hợp lệ. Vui lòng kiểm tra lại.</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="icon_launcher">Icon launcher</string>
    <string name="welcome_banner">Xin chào,</string>
    <string name="make_appointment_at_health_facilities">Đặt khám tại cơ sở y tế</string>
    <string name="make_appointment_with_doctor">Đặt khám bác sĩ</string>
    <string name="remote_medical_consultation">Tư vấn khám bệnh từ xa</string>
    <string name="help">Hỗ trợ</string>
    <string name="select_health_facility">Chọn cơ sở y tế</string>
    <string name="type_name_of_health_facility">Nhập tên cơ sở y tế</string>
    <string name="all_province_city">Tất cả Tỉnh/Thành phố</string>
    <string name="icon_star">Icon star</string>
    <string name="select_department">Chọn chuyên khoa</string>
    <string name="remote_healthcare">Tư vấn khám bệnh từ xa</string>
    <string name="type_department_to_quick_find">Nhập chuyên khoa để tìm nhanh</string>
    <string name="select_doctor">Chọn bác sĩ</string>
    <string name="select_patient">Chọn hồ sơ người bệnh</string>
    <string name="type_doctor_name_to_quick_find">Nhập tên bác sĩ để tìm nhanh</string>
    <string name="type_patient_name_to_quick_find">Nhập tên người bệnh để tìm nhanh</string>
    <string name="gender_label">Giới tính:</string>
    <string name="department_label">Chuyên khoa:</string>
    <string name="appointment_calendar_this_week">Lịch khám: </string>
    <string name="price_label">Giá khám:</string>
    <string name="choose_appointment_date">Chọn ngày đặt khám</string>
    <string name="currently_allow_schedule_before_x_day">Hiện tại bệnh viện chỉ hỗ trợ đặt lịch khám trước hẹn từ 1 đến 30 ngày.</string>
    <string name="calendar_information">Thông tin lịch khám</string>
    <string name="today">Hôm nay</string>
    <string name="available">Còn trống</string>
    <string name="full_slot">Kín lịch</string>
    <string name="select_appointment_time">Chọn thời gian khám</string>
    <string name="appointment_time_information">Thông tin thời gian khám</string>
    <string name="seven_utc">Tất cả khung thời gian khám bệnh hiện tại được hiển thị theo múi giờ Việt Nam GMT +7</string>
    <string name="still_available">Còn trống</string>
    <string name="full_time_slot">Kín khung giờ</string>
    <string name="confirming_information">Xác nhận thông tin</string>
    <string name="confirm_information">Xác nhận thông tin</string>
    <string name="patient_full_name">Họ và tên</string>
    <string name="patient_id">Mã số bệnh nhân</string>
    <string name="passport">CMND/Passport</string>
    <string name="health_insurance_code">Mã bảo hiểm y tế</string>
    <string name="appointment_date">Ngày khám</string>
    <string name="appointment_time">Giờ khám</string>
    <string name="doctor">Bác sĩ</string>
    <string name="health_facility">Cơ sở y tế</string>
    <string name="service_price">Chi phí khám</string>
    <string name="please_check_again_appointment_information">Vui lòng kiểm tra lại các thông tin về lịch khám trước khi chọn xác nhận và đặt khám</string>
    <string name="select_payment_method">Chọn phương thức thanh toán</string>
    <string name="qr_code_mobile_banking">Thanh toán QR Code/ Mobile banking</string>
    <string name="payment_momo">Thanh toán bằng Momo</string>
    <string name="payment_visa_mastercard_jcb">Thanh toán bằng Visa/Mastercard/JCB</string>
    <string name="payment_domestic_atm_internet_banking">Thanh toán bằng thẻ ATM nội địa/ Internet banking</string>
    <string name="payment_onsite">Thanh toán tại bệnh viện</string>
    <string name="payment_information">Thông tin thanh toán</string>
    <string name="please_check_all_information_before_do_payment">Vui lòng kiếm tra lại tất cả thông tin trước khi thực hiện các bước thanh toán</string>
    <string name="patient_information">Thông tin bệnh nhân</string>
    <string name="utility_price">Phí tiện ích + TGTT</string>
    <string name="total_price">Tổng chi phí</string>
    <string name="do_payment">Thực hiện thanh toán</string>
    <string name="appointment_information">Thông tin đặt khám</string>
    <string name="notification">Thông báo</string>
    <string name="wait_for_confirmation">Đang chờ xác nhận</string>
    <string name="schedule_confirmed">Đã xác nhận</string>
    <string name="checked_up">Đã khám</string>
    <string name="cancelled">Đã huỷ</string>
    <string name="entire">Tất cả</string>
    <string name="personal_appointment_management">Lịch đặt khám cá nhân</string>
    <string name="status">Trạng thái</string>
    <string name="appointment_code">Mã phiếu:&#160;</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="city_list">Danh sách tỉnh/thành phố</string>
    <string name="city_province_error">Danh sách tỉnh thành đang gặp lỗi</string>
    <string name="something_wrong_please_reset">Đã có lỗi xảy ra. Vui lòng thử tải lại danh sách.</string>
    <string name="book_successfully">Đặt lịch thành công</string>
    <string name="temporary_unlabeled">Chưa niêm yết</string>
    <string name="this_doctor_dont_have_schedule">Bác sĩ này không có lịch khám</string>
    <string name="search_appointment">Tra cứu lịch khám</string>
    <string name="make_blood_test_appointment">Đặt lịch xét nghiệm</string>
    <string name="comprehensive_health_package">Gói sức khoẻ toàn diện</string>
    <string name="make_hospital_payment">Thanh toán viện phí</string>
    <string name="search_examination_result">Tra cứu kết quả</string>
    <string name="make_appointment_phone">Đặt khám 1900-1234</string>
    <string name="look_for_more">Xem thêm</string>
    <string name="from_date">Từ ngày</string>
    <string name="please_select_date">Vui lòng chọn ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="time_range">Khung giờ</string>
    <string name="all_time_range">Tất cả khung giờ</string>
    <string name="policy_and_term">Điều khoản và quy định</string>
    <string name="term_of_use">Điều khoản sử dụng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="term_of_service">Điều khoản dịch vụ</string>
    <string name="switchboard">Tổng đài CSKH - 19001234</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="usual_question">Câu hỏi thường gặp</string>
    <string name="language">Ngôn ngữ</string>
    <string name="logout">Đăng xuất</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="you_have_not_login_yet">Bạn chưa đăng nhập</string>
    <string name="this_function_need_to_login_to_use">Chức năng này cần đăng nhập để sử dụng</string>
    <string name="medpro_welcome">MedPro xin chào,</string>
    <string name="click_here_to_login">Bấm vào đây để đăng nhập</string>
    <string name="register_successfully">Bạn đã đăng ký thành công. Hãy đăng nhập</string>
    <string name="you_are_not_connected_to_internet">Bạn chưa kết nối Internet</string>
    <string name="please_connect_to_the_internet">Vui lòng kết nối Internet</string>
    <string name="payment_zalo_pay">Thanh toán bằng ZaloPay</string>
    <string name="address_colon">Địa chỉ:&#160;</string>
    <string name="description_colon">Mô tả:&#160;</string>
    <string name="description">Mô tả</string>
    <string name="hotline">Đường dây nóng:&#160;</string>
    <string name="working_time_colon">Thời gian làm việc:&#160;</string>
    <string name="view_department_list">Xem danh sách chuyên khoa</string>
    <string name="view_doctor_list">Xem danh sách bác sĩ</string>
    <string name="this_week">Tuần này</string>
    <string name="default_text">Mặc định</string>
    <string name="select_date">Chọn ngày</string>
</resources>