<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MethodPaymentSelectionActivity">

    <RelativeLayout
        android:id="@+id/rlTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="@dimen/_8sdp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon_back"
            android:src="@drawable/ic_back"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/quicksand_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/select_payment_method"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTopAppBar"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp">

        <TextView
            android:id="@+id/tvZalopay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_payment_method_selection"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/payment_zalo_pay"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvMomo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_payment_method_selection"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/payment_momo"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvVisa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_payment_method_selection"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/payment_visa_mastercard_jcb"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvDomestic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_payment_method_selection"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/payment_domestic_atm_internet_banking"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvOnsite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_payment_method_selection"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/payment_onsite"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</RelativeLayout>